# redix

./: Makefile  README.md  docker-compose.test.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: release.yml
.superpowers/sdd/: progress.md  task-1-report.md  task-11-report.md  task-14-report.md  task-16-report.md  task-17-report.md  task-18-report.md  task-19-report.md  task-2-report.md  task-20-report.md  task-23-report.md  task-24-report.md  task-25-report.md  task-26-report.md  task-27-report.md  task-28-polish-release-report.md  task-4-report.md  task-6-report.md  task-7-report.md  task-9-report.md  ui-fix-report.md
docs/: index.html  prd.md  tasks.md
docs/superpowers/plans/: phase-0-scaffold.md  phase-1-connection.md  phase-2-redis-backend.md  phase-3-key-browser.md  phase-4-value-display.md  phase-5-console.md  phase-6-polish.md  phase-7-testing.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connections.rs  console.rs  history.rs  keys.rs  mod.rs  values.rs
src-tauri/src/config/: connection.rs  mod.rs  store.rs
src-tauri/src/redis/: client.rs  cluster.rs  mod.rs  sentinel.rs  standalone.rs  teleport.rs  tunnel.rs
src-tauri/tests/: redis_integration.rs
src/lib/components/: AddKeyModal.svelte  ConnectionForm.svelte  ConnectionList.svelte  Console.svelte  Dashboard.svelte  EditModal.svelte  KeyTree.svelte  Layout.svelte  Panel.svelte  PromptModal.svelte  Spinner.svelte  ThemeToggle.svelte  Toast.svelte  ToastContainer.svelte  TreeNode.svelte
src/lib/components/viewers/: BitmapViewer.svelte  GeoViewer.svelte  HashViewer.svelte  HyperLogLogViewer.svelte  ListViewer.svelte  SetViewer.svelte  SortedSetViewer.svelte  StreamViewer.svelte  StringViewer.svelte  ValueViewer.svelte
src/lib/stores/: connections.ts  history.ts  loading.ts  theme.ts  toasts.ts
src/lib/types/: connection.ts
src/lib/utils/: beautifier.ts  csv.ts  format-detector.ts  shortcuts.ts  tree-builder.ts
src/routes/: +page.svelte
tests/: app.spec.ts
