[package]
name = "redix"
version = "0.2.0"
description = "The next-generation Redis GUI for power users."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redix_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
whoami = "1"
dirs = "5"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster", "cluster-async", "tokio-rustls-comp"] }
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19.0"

[dev-dependencies]
tempfile = "3"
